# WonderfullyIntelligentHouse

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config_casa.txt  main.cpp
.github/workflows/: cmake.yml
include/: devices.h  exceptions.h  patterns.h  room_house.h  source.h  templates.h
src/: devices.cpp  patterns.cpp  room_house.cpp  source.cpp
